--- a/css/main.scss
+++ b/css/main.scss
@@ -13,7 +13,7 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
+$text-color:       #FFF;
 $background-color: #fdfdfd;
 $brand-color:      #2a7ae2;
 
@@ -38,7 +38,6 @@ $on-laptop:        800px;
         @content;
     }
 }
-
 
 
 // Import partials from `sass_dir` (defaults to `_sass`)
