Implemented layout for first post cover

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="container">
 
     <div class="header-circle">
-      <div class="header-circle-inner">
+      <div class="header-circle-inner intro-text">
         <h2>HI I’M KATIE</h2>
         <hr class="dash" />
         <p>I create things that <em>look good</em> and <em>work better</em></p>
