--- a/css/main.scss
+++ b/css/main.scss
@@ -6,8 +6,8 @@
 
 
 // Our variables
-$base-font-family: Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
+$base-font-family: "Montserrat", Arial, sans-serif; /* TODO: add google font */
+$base-font-size:   20px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
@@ -16,6 +16,7 @@ $spacing-unit:     30px;
 $text-color:       #FFF;
 $background-color: #fdfdfd;
 $brand-color:      #2a7ae2;
+$link-color:       #FFB848;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
@@ -39,6 +40,43 @@ $on-laptop:        800px;
     }
 }
 
+/* border-serrated - a zig zag triangle border with linear gradient
+*/
+@mixin border-top-serrated($size, $color-outer) {
+    & {
+        position: relative;
+        padding-top: $size;
+    }  
+    &:before {
+        top: 0px;
+        background-position: left top;
+        @include background(linear-gradient(-135deg, $color-outer $size / 2, transparent 0), linear-gradient(135deg, $color-outer $size / 2, transparent 0));
+        @include border-serrated-helper($size, $color-outer);
+    }
+}
+@mixin border-bottom-serrated($size, $color-outer) {
+    & {
+        position: relative;
+        padding-bottom: $size;
+    }
+    &:after {
+        bottom: 0px;
+        background-position: left bottom;
+        @include background(linear-gradient(-45deg, $color-outer $size / 2, transparent 0), linear-gradient(45deg, $color-outer $size / 2, transparent 0));
+        @include border-serrated-helper($size, $color-outer);
+    }
+}
+
+@mixin border-serrated-helper($size, $color-outer) {
+    content: " ";
+    display: block;
+    position: absolute;
+    left: 0px;
+    width: 100%;
+    height: $size;
+    background-repeat: repeat-x;
+    background-size: $size $size;
+}
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
