--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,43 @@
 <footer class="site-footer">
 
-  <div class="wrapper">
+  <div class="blog-section">
+    <div class="container">
+        <div class="row">
+          <div class="col-md-2"></div>
+          <div class="col-md-8">
+            <p>My uncensored, stream of conciousness blog:</p>
+            <div class="blog-section-link">
+              <a href="http://katiemacoy.com/">blog.katiemacoy.com</a>
+            </div>
+          </div>
+          <div class="col-md-2"></div>
+      </div>
+    </div>
+  </div>
 
-   
+  <div class="about-section">
+    <div class="container">
+        <div class="row">
+          <div class="col-md-2"></div>
+          <div class="col-md-8">
+            <div class="about-image"><img src="{{ "assets/images/katie.png" | prepend: site.baseurl }}" /></div>
+            <div class="about-name"><h1>Katie Macoy</h1></div>
+            <div class="about-description">
+              <p>I’m an Amsterdam based designer and illustrator. My interests are making compelling design and viewing strange things on the internet.</p>
+              <p>Get in touch! <a href="mailto:hello@katiemacoy.com  " title="Mail">hello@katiemacoy.com  </a></p>
+            </div>
+            <div class="about-social">
+              <ul class="list-inline">
+                <li><a href="mailto:hello@katiemacoy.com" class="btn-social btn-mail" title="Mail"></a></li>
+                <li><a href="http://nl.linkedin.com/in/katiemacoy" class="btn-social btn-linkedin" title="LinkedIn"></a></li>
+                <li><a href="https://dribbble.com/punnettsquaresrule" class="btn-social btn-dribbble" title="Dribbble"></a></li>
+                <li><a href="https://twitter.com/pigeonfactory" class="btn-social btn-twitter" title="Twitter"></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-2"></div>
+      </div>
+    </div>
   </div>
 
 </footer>
