Added CSS for Google Fonts

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -44,7 +44,7 @@ $header-padding: 52px;
     }
 
     em {
-        font-family: "Lobster", serif; /* TODO: Use google font */
+        font-family: "Lobster", cursive;
         font-size: 39px;
         font-style: normal;
     }
@@ -114,7 +114,7 @@ hr.dash {
     background-color: #E35050;
 
     h1 {
-        font-family: "Lobster", serif; /* TODO: Use google font */
+        font-family: "Lobster", cursive;
         font-size: 40px;
     }
  }
