--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,9 +6,13 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
 
+    <!-- Google Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Lobster|Montserrat:400,700' rel='stylesheet' type='text/css'>
+
     <!-- Latest compiled and minified version of Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 
+    <!-- Main stylesheet -->
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
