--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,7 @@
 /** 
  * Global style
  */
-$base-font-family: "Montserrat", Arial, sans-serif; /* TODO: add google font */
+$base-font-family: "Montserrat", sans-serif; /* TODO: add google font */
 $base-font-size:   20px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
