Added divider lines for about section

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,6 +16,11 @@
   </div>
 
   <div class="about-section">
+
+  <hr class="about-divider-1" />
+  <hr class="about-divider-2" />
+  <hr class="about-divider-3" />
+
     <div class="container">
         <div class="row">
           <div class="col-md-2"></div>
