--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -109,7 +109,7 @@ hr.dash {
  }
 
  .about-section {
-    padding: 75px 0;
+    padding-top: 2px;
     text-align: center;
     background-color: #E35050;
 
@@ -117,6 +117,31 @@ hr.dash {
         font-family: "Lobster", cursive;
         font-size: 40px;
     }
+
+    .container {
+        padding: 75px 0;
+    }
+ }
+
+ .about-divider {
+    background-color: #9E3030;
+    border: none;
+    margin-bottom: 2px;
+ }
+
+ .about-divider-1 {
+    @extend .about-divider;
+    height: 4px;
+ }
+
+ .about-divider-2 {
+    @extend .about-divider;
+    height: 3px;
+ }
+
+ .about-divider-3 {
+    @extend .about-divider;
+    height: 1px;
  }
 
  .about-image {
