Implemented detail page header

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
     </div>
   </div>
 
-  <div class="about-section">
+  <div class="about-section" id="contact">
 
   <hr class="about-divider-1" />
   <hr class="about-divider-2" />
