--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -198,3 +198,24 @@ pre {
         }
     }
 }
+
+/** 
+ * Buttons
+ */
+
+ .btn-default {
+    padding: 12px 15px;
+    background-color: transparent;
+    border: 2px solid white;
+    border-radius: 11px;
+    font-size: 1em;
+    line-height: 1em;
+    color: $text-color;
+}
+
+.btn-default:hover {
+    color: darken($text-color, 15%);
+    border-color: darken($text-color, 15%);
+    box-shadow: none;
+    background-color: transparent;
+}
