--- a/_sass/_detail.scss
+++ b/_sass/_detail.scss
@@ -3,12 +3,18 @@
  */
 
  .header-detail {
-  height: 100px;
+  @extend %clearfix;
+  padding-top: 30px;
+  padding-bottom: 70px;
 
     .logo {
       font-family: "Lobster", cursive;
       font-size: 30px;
       float: left;
+
+      a {
+        color: white;
+      }
     }
 
     .contact-button {
@@ -16,7 +22,21 @@
     }
 
     .header-content {
-      // clear: both;
       text-align: center;
+    }
+
+    .nav {
+      margin-bottom: 70px;
+    }
+
+    h1.post-title {
+      font-size: 40px;
+      font-weight: bold;
+    }
+
+    h2.post-subtitle {
+      font-size: 20px;
+      font-weight: normal;
+      margin-bottom: 70px; 
     }
  }
