--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
     <meta name="description" content="{{ site.description }}">
 
     <!-- Google Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Lobster|Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lobster|Montserrat:400,700|Roboto+Slab:700,400' rel='stylesheet' type='text/css'>
 
     <!-- Latest compiled and minified version of Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
