--- a/_layouts/detail.html
+++ b/_layouts/detail.html
@@ -7,7 +7,7 @@
 
     {% include header-detail.html %}
 
-    {{ content }}
+    {% include post-detail.html %}
 
     {% include footer-detail.html %}
 
