--- a/_sass/_detail.scss
+++ b/_sass/_detail.scss
@@ -5,7 +5,7 @@
  .header-detail {
   @extend %clearfix;
   padding-top: 30px;
-  padding-bottom: 70px;
+  padding-bottom: 100px;
 
     .logo {
       font-family: "Lobster", cursive;
@@ -38,5 +38,47 @@
       font-size: 20px;
       font-weight: normal;
       margin-bottom: 70px; 
+    }
+ }
+
+ .content-section {
+  @include border-top-serrated($serrated-border-height, #FFF);
+
+  color: #202117;
+  font-size: 15px;
+  line-height: 200%;
+  padding-top: 90px;
+
+    p {
+      font-family: "Roboto Slab", serif;
+      margin-bottom: 40px;
+    }
+
+    h3 {
+      font-size: 20px;
+      font-weight: bold;
+      text-align: center;
+    }
+
+    img {
+      margin-bottom: 40px;
+    }
+
+    .post-header {
+      margin-bottom: 90px;
+
+      h3 {
+        text-align: left;
+      }
+    }
+
+    .post-meta {
+      h3 {
+        margin-bottom: 8px;
+      }
+
+      p {
+        margin-bottom: 20px;
+      }
     }
  }
