Added website link button

--- a/_includes/post-detail.html
+++ b/_includes/post-detail.html
@@ -14,6 +14,9 @@
         <p>{{ page.meta.type }}</p>
         <h3>How long did it take?</h3>
         <p>{{ page.meta.duration }}</p>
+        {% if page.website %}
+          <a href="{{ page.website.url }}" class="btn btn-default btn-accessory btn-post-{{ page.title | slugify }}">{{ page.website.title }} <i class="fa fa-angle-right fa-lg"></i></a>
+        {% endif %}
       </div>
     </div>
 
