--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -219,3 +219,9 @@ pre {
     box-shadow: none;
     background-color: transparent;
 }
+
+.btn-accessory {
+    i {
+        margin-left: 5px;
+    }
+}
