Improved button hover states

--- a/_sass/_detail.scss
+++ b/_sass/_detail.scss
@@ -49,6 +49,7 @@
   @include border-top-serrated($serrated-border-height, #FFF);
 
   color: #202117;
+  background-color: white;
   font-size: 15px;
   line-height: 200%;
   padding-top: 90px;
