--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -211,13 +211,15 @@ pre {
     font-size: 1em;
     line-height: 1em;
     color: $text-color;
+    transition: all .2s linear;
 }
 
 .btn-default:hover {
-    color: darken($text-color, 15%);
-    border-color: darken($text-color, 15%);
+    color: $text-color;
+    border-color: $text-color;
     box-shadow: none;
-    background-color: transparent;
+    transition: all .2s linear;
+    background-color: rgba($text-color, .15);
 }
 
 .btn-accessory {
