Implemented animated underline

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,10 +33,10 @@
             </div>
             <div class="about-social">
               <ul class="list-inline">
-                <li><a href="mailto:hello@katiemacoy.com" class="btn-social btn-mail" title="Mail"></a></li>
-                <li><a href="http://nl.linkedin.com/in/katiemacoy" class="btn-social btn-linkedin" title="LinkedIn"></a></li>
-                <li><a href="https://dribbble.com/punnettsquaresrule" class="btn-social btn-dribbble" title="Dribbble"></a></li>
-                <li><a href="http://katiemacoy.com/" class="btn-social btn-tumblr" title="Tumblr"></a></li>
+                <li><a href="mailto:hello@katiemacoy.com" class="btn btn-social btn-mail" title="Mail"></a></li>
+                <li><a href="http://nl.linkedin.com/in/katiemacoy" class="btn btn-social btn-linkedin" title="LinkedIn"></a></li>
+                <li><a href="https://dribbble.com/punnettsquaresrule" class="btn btn-social btn-dribbble" title="Dribbble"></a></li>
+                <li><a href="http://katiemacoy.com/" class="btn btn-social btn-tumblr" title="Tumblr"></a></li>
               </ul>
             </div>
           </div>
