--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -54,3 +54,31 @@
     background-repeat: repeat-x;
     background-size: $size $size;
 }
+
+@mixin animate-underline($color, $animation-speed) {
+    & {
+        position: relative;
+        text-decoration: none;
+    }
+
+    &:before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      bottom: 0;
+      left: 0;
+      background-color: $color;
+      visibility: hidden;
+      -webkit-transform: scaleX(0);
+      transform: scaleX(0);
+      -webkit-transition: all $animation-speed ease-in-out 0s;
+      transition: all $animation-speed ease-in-out 0s;
+    }
+
+    &:hover:before {
+      visibility: visible;
+      -webkit-transform: scaleX(1);
+      transform: scaleX(1);
+    }
+}
