--- a/_includes/footer-detail.html
+++ b/_includes/footer-detail.html
@@ -11,38 +11,23 @@
 {% endif %}
 
 
-
-<div class="post-section {{ previous_post.title | slugify | prepend: "post-style-" }}">
-
-  <div class="container">
-    <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-              <div class="post-description">{{ previous_post.description | markdownify }}</div>
-              <a class="btn btn-default btn-post btn-accessory" href="{{ previous_post.url }}" role="button">{{ previous_post.button_title }} <i class="fa fa-angle-right fa-lg"></i></a>
-              <div class="post-cover-image">
-                <img src="{{ previous_post.cover_image | prepend: "/assets/images/posts/" | prepend: site.baseurl }}" />
-              </div>
-        </div>
-        <div class="col-md-2"></div>
-    </div>
-  </div>
-
-</div>
-
-<div class="post-section {{ next_post.title | slugify | prepend: "post-style-" }}">
+<div class="footer-detail {{ page.title | slugify | prepend: "post-style-" }}">
 
   <div class="container">
     <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-              <div class="post-description">{{ next_post.description | markdownify }}</div>
-              <a class="btn btn-default btn-post btn-accessory" href="{{ next_post.url }}" role="button">{{ previous_post.button_title }} <i class="fa fa-angle-right fa-lg"></i></a>
-              <div class="post-cover-image">
-                <img src="{{ next_post.cover_image | prepend: "/assets/images/posts/" | prepend: site.baseurl }}" />
-              </div>
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <h2>Check out my other projects</h2>
+        <div class="post-buttons">
+          <div class="previous-post-button">
+            <a class="btn btn-default btn-accessory-left" href="{{ previous_post.url }}" role="button"><i class="fa fa-angle-left fa-lg"></i> {{ previous_post.title }}</a>
+          </div>
+          <div class="next-post-button">
+            <a class="btn btn-default btn-accessory" href="{{ next_post.url }}" role="button">{{ next_post.title }} <i class="fa fa-angle-right fa-lg"></i></a>
+          </div>
         </div>
-        <div class="col-md-2"></div>
+      </div>
+      <div class="col-md-2"></div>
     </div>
   </div>
 
