--- a/_sass/_detail.scss
+++ b/_sass/_detail.scss
@@ -108,14 +108,33 @@
  */
 
  .footer-detail {
-  display: table;
-  width: 100%;
 
-  .footer-section {
-    display: table-cell;
-    padding: 100px 0;
+  text-align: center;
+  padding-top: 60px;
+  padding-bottom: 70px;
+
+  h2 {
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 40px;
   }
 
-  .footer-previous {
+  .post-buttons {
+    .previous-post-button {
+      float: left;
+
+      @include mobile {
+        float: none;
+        margin-bottom: 20px;
+      }
+    }
+
+    .next-post-button {
+      float: right;
+
+      @include mobile {
+        float: none;
+      }
+    }
   }
  }
