--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -2,15 +2,10 @@
  * Media queries
  */
 
-// Using media queries with like this:
-// @include media-query($palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
-@mixin media-query($device) {
-    @media screen and (max-width: $device) {
+$mobile: 480px;
+
+@mixin mobile() {
+    @media only screen and (max-width: $mobile) {
         @content;
     }
 }
@@ -54,6 +49,10 @@
     background-repeat: repeat-x;
     background-size: $size $size;
 }
+
+/** 
+ * Underline animation for links
+ */
 
 @mixin animate-underline($color, $animation-speed) {
     & {
