--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -17,6 +17,12 @@ $header-padding: 52px;
     border-radius: 50%;
     margin:0 auto;
     padding-top:13px;
+
+    @include mobile {
+        width: 250px;
+        height: 250px;
+        padding-top: 10px;
+    }
 }
 
 .header-circle-inner {
@@ -27,26 +33,49 @@ $header-padding: 52px;
     margin: 0 auto;
     text-align: center;
     padding: 30px 44px;
+
+    @include mobile {
+        width: 230px;
+        height: 230px;
+        padding: 26px 40px;
+    }
 }
 
 .intro-text {
     h2, p {
         margin: 10px 0;
+
+        @include mobile {
+            margin: 7px 0;
+        }
     }
 
     h2 {
         font-size: 20px;
+
+        @include mobile {
+            font-size: 18px;
+            font-weight: bold;
+        }
     }
 
     p {
         font-size: 19px;
         line-height: 180%;
+
+        @include mobile {
+            font-size: 16px;
+        }
     }
 
     em {
         font-family: "Lobster", cursive;
         font-size: 39px;
         font-style: normal;
+
+        @include mobile {
+            font-size: 26px;
+        }
     }
 }
 
@@ -104,11 +133,16 @@ hr.dash {
     a {
       font-size: 30px;
       @include animate-underline($link-color, 0.3s);
+
+      @include mobile {
+        font-size: 24px;
+      }
     }
  }
 
  .about-section {
     padding-top: 2px;
+    padding-bottom: 75px;
     text-align: center;
     background-color: #E35050;
 
@@ -117,9 +151,9 @@ hr.dash {
         font-size: 2em;
     }
 
-    .container {
-        padding: 75px 0;
-    }
+    // .container {
+    //     padding: 75px 0;
+    // }
  }
 
  .about-divider {
@@ -141,6 +175,7 @@ hr.dash {
  .about-divider-3 {
     @extend .about-divider;
     height: 1px;
+    margin-bottom: 75px;
  }
 
  .about-image {
