--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -8,6 +8,8 @@ $header-padding: 52px;
     background-image: url("../assets/images/header_pattern.png");
     padding: $header-padding 0;
     padding-bottom: $serrated-border-height + $header-padding;
+
+    @include image-2x("../assets/images/header_pattern@2x.png", 500px, 500px);
 }
 
 .header-circle {
