Retina profile image

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
         <div class="row">
           <div class="col-md-3"></div>
           <div class="col-md-6">
-            <div class="about-image"><img src="{{ "assets/images/katie.png" | prepend: site.baseurl }}" /></div>
+            <div class="about-image"><img src="{{ "assets/images/katie.png" | prepend: site.baseurl }}" srcset="{{ "assets/images/katie@2x.png" | prepend: site.baseurl }} 2x" /></div>
             <div class="about-name"><h1>Katie Macoy</h1></div>
             <div class="about-description">
               <p>I’m an Amsterdam based designer and illustrator. My interests are making compelling design and viewing strange things on the internet.</p>
