Retina social icons

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -214,16 +214,20 @@ hr.dash {
 
 .btn-mail {
     background-image: url("../assets/images/social_icons/mail.png");
+    @include image-2x("../assets/images/social_icons/mail@2x.png", 44px, 44px);
 }
 
 .btn-linkedin {
     background-image: url("../assets/images/social_icons/linkedin.png");
+    @include image-2x("../assets/images/social_icons/linkedin@2x.png", 44px, 44px);
 }
 
 .btn-dribbble {
    background-image: url("../assets/images/social_icons/dribbble.png");
+   @include image-2x("../assets/images/social_icons/dribbble@2x.png", 44px, 44px);
 }
 
 .btn-tumblr {
    background-image: url("../assets/images/social_icons/tumblr.png");
+   @include image-2x("../assets/images/social_icons/tumblr@2x.png", 44px, 44px);
 }
