--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -55,7 +55,11 @@ figure > img {
 }
 
 figcaption {
-    font-size: $small-font-size;
+    font-family: "Roboto Slab", serif;
+    font-size: 12px;
+    font-weight: normal;
+    text-align: right;
+    color: #CCC;
 }
 
 
