Added contact me in footer

--- a/_includes/footer-detail.html
+++ b/_includes/footer-detail.html
@@ -26,6 +26,9 @@
             <a class="btn btn-default btn-accessory" href="{{ next_post.url }}" role="button">{{ next_post.title }} <i class="fa fa-angle-right fa-lg"></i></a>
           </div>
         </div>
+        <div class="footer-content">
+          <p>Or <a href="{{ site.url }}#contact">contact me</a></p>
+        </div>
       </div>
       <div class="col-md-2"></div>
     </div>
