--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,14 +28,14 @@
             <div class="about-image"><img src="{{ "assets/images/katie.png" | prepend: site.baseurl }}" srcset="{{ "assets/images/katie@2x.png" | prepend: site.baseurl }} 2x" /></div>
             <div class="about-name"><h1>Katie Macoy</h1></div>
             <div class="about-description">
-              <p>I’m an Amsterdam based designer and illustrator. My interests are making compelling design and viewing strange things on the internet.</p>
+              <p>I’m an Amsterdam based designer and illustrator. My interests include making compelling design and viewing strange things on the internet.</p>
               <p>Get in touch! <a href="mailto:hello@katiemacoy.com  " title="Mail">hello@katiemacoy.com  </a></p>
             </div>
             <div class="about-social">
               <ul class="list-inline">
                 <li><a href="mailto:hello@katiemacoy.com" class="btn btn-social btn-mail" title="Mail"></a></li>
                 <li><a href="http://nl.linkedin.com/in/katiemacoy" class="btn btn-social btn-linkedin" title="LinkedIn"></a></li>
-                <li><a href="https://dribbble.com/punnettsquaresrule" class="btn btn-social btn-dribbble" title="Dribbble"></a></li>
+                <li><a href="https://dribbble.com/katiemacoy" class="btn btn-social btn-dribbble" title="Dribbble"></a></li>
                 <li><a href="http://katiemacoy.com/" class="btn btn-social btn-tumblr" title="Tumblr"></a></li>
               </ul>
             </div>
