Updated blog URLs

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
           <div class="col-md-6">
             <p>My uncensored, stream of conciousness blog:</p>
             <div class="blog-section-link">
-              <a href="http://katiemacoy.com/">blog.katiemacoy.com</a>
+              <a href="http://blog.katiemacoy.com/">blog.katiemacoy.com</a>
             </div>
           </div>
           <div class="col-md-3"></div>
