--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,7 +36,7 @@
                 <li><a href="mailto:hello@katiemacoy.com" class="btn btn-social btn-mail" title="Mail"></a></li>
                 <li><a href="http://nl.linkedin.com/in/katiemacoy" class="btn btn-social btn-linkedin" title="LinkedIn"></a></li>
                 <li><a href="https://dribbble.com/katiemacoy" class="btn btn-social btn-dribbble" title="Dribbble"></a></li>
-                <li><a href="http://katiemacoy.com/" class="btn btn-social btn-tumblr" title="Tumblr"></a></li>
+                <li><a href="http://blog.katiemacoy.com/" class="btn btn-social btn-tumblr" title="Tumblr"></a></li>
               </ul>
             </div>
           </div>
