--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,9 +4,9 @@
 
     <div class="header-circle">
       <div class="header-circle-inner intro-text">
-        <h2>HI I’M KATIE</h2>
+        <h2>HI, I’M KATIE</h2>
         <hr class="dash" />
-        <p>I create things that <em>look good</em> and <em>work better</em></p>
+        <p>I create things that <em>look great</em> and <em>work better</em></p>
         <hr class="dash" />
         <h2>CHECK IT OUT</h2>
       </div>
