--- a/_sass/_detail.scss
+++ b/_sass/_detail.scss
@@ -8,7 +8,7 @@
   padding-bottom: 100px;
 
     .logo {
-      font-family: "Lobster", cursive;
+      font-family: 'Grand Hotel', cursive;
       font-size: 30px;
       float: left;
 
@@ -31,12 +31,12 @@
     }
 
     h1.post-title {
-      font-size: 40px;
-      font-weight: bold;
+      font-size: 30px;
     }
 
     h2.post-subtitle {
-      font-size: 20px;
+      font-family: "Roboto Slab", serif;
+      font-size: 17px;
       font-weight: normal;
       margin-bottom: 70px; 
     }
@@ -62,8 +62,8 @@
     }
 
     h3 {
-      font-size: 24px;
-      font-weight: bold;
+      font-size: 20px;
+      font-weight: regular;
     }
 
     img {
@@ -104,7 +104,7 @@
 
     .post-content {
       h3{
-        font-size: 28px;
+        font-size: 20px;
         margin-top: 70px;
         margin-bottom: 20px;
       }
@@ -126,8 +126,7 @@
   padding-bottom: 20px;
 
   h2 {
-    font-size: 25px;
-    font-weight: bold;
+    font-size: 20px;
     margin-bottom: 70px;
   }
 
