--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -45,25 +45,25 @@ $header-padding: 52px;
 
 .intro-text {
     h2, p {
-        margin: 10px 0;
+        margin: 6px 0;
 
         @include mobile {
-            margin: 7px 0;
+            margin: 5px 0;
         }
     }
 
     h2 {
-        font-size: 20px;
+        font-size: 18px;
 
         @include mobile {
-            font-size: 18px;
+            font-size: 16px;
             font-weight: bold;
         }
     }
 
     p {
         font-size: 19px;
-        line-height: 180%;
+        line-height: 210%;
 
         @include mobile {
             font-size: 16px;
@@ -71,9 +71,18 @@ $header-padding: 52px;
     }
 
     em {
-        font-family: "Lobster", cursive;
-        font-size: 39px;
+        font-family: 'Grand Hotel', cursive;
+        font-size: 40px;
         font-style: normal;
+        padding-left: 5px;
+        padding-right: 5px;
+
+        line-height: 130%;
+
+          @include mobile {
+            line-height: 100%;
+        }
+
 
         @include mobile {
             font-size: 26px;
@@ -149,7 +158,7 @@ hr.dash {
     background-color: #E35050;
 
     h1 {
-        font-family: "Lobster", cursive;
+        font-family: 'Grand Hotel', cursive;
         font-size: 2em;
     }
 
@@ -185,7 +194,7 @@ hr.dash {
  }
 
  .about-name {
-    margin-bottom: 25px;
+    margin-bottom: 15px;
  }
 
  .about-description {
