--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,7 +28,7 @@
             <div class="about-image"><img src="{{ "assets/images/katie.png" | prepend: site.baseurl }}" srcset="{{ "assets/images/katie@2x.png" | prepend: site.baseurl }} 2x" /></div>
             <div class="about-name"><h1>Katie Macoy</h1></div>
             <div class="about-description">
-              <p>I’m an New Zealand based designer and illustrator. My interests include making compelling design and looking at dog pictures on the internet.</p>
+              <p>I’m an New Zealand based designer and illustrator. My interests include making compelling designs and looking at dog pictures on the internet.</p>
               <p>Get in touch! <a href="mailto:hello@katiemacoy.com  " title="Mail">hello@katiemacoy.com  </a></p>
             </div>
             <div class="about-social">
