--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,9 +5,9 @@
         <div class="row">
           <div class="col-md-3"></div>
           <div class="col-md-6">
-            <p>My uncensored, stream of conciousness blog:</p>
+            <p>My blog about moving to New Zealand</p>
             <div class="blog-section-link">
-              <a href="http://blog.katiemacoy.com/">blog.katiemacoy.com</a>
+              <a href="http://laserkiwi.com/">www.laserkiwi.com</a>
             </div>
           </div>
           <div class="col-md-3"></div>
@@ -28,8 +28,8 @@
             <div class="about-image"><img src="{{ "assets/images/katie.png" | prepend: site.baseurl }}" srcset="{{ "assets/images/katie@2x.png" | prepend: site.baseurl }} 2x" /></div>
             <div class="about-name"><h1>Katie Macoy</h1></div>
             <div class="about-description">
+              <p>For more of my work without the words: <a href="http://portfolio.katiemacoy.com" title="Portfolio">portfolio.katiemacoy.com</a></p>
               <p>I’m an New Zealand based designer and illustrator. My interests include making compelling designs and looking at dog pictures on the internet.</p>
-              <p>Get in touch! <a href="mailto:hello@katiemacoy.com  " title="Mail">hello@katiemacoy.com  </a></p>
             </div>
             <div class="about-social">
               <ul class="list-inline">
