--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,7 +29,7 @@
             <div class="about-name"><h1>Katie Macoy</h1></div>
             <div class="about-description">
               <p>For more of my work without the words: <a href="http://portfolio.katiemacoy.com" title="Portfolio">portfolio.katiemacoy.com</a></p>
-              <p>I’m an New Zealand based designer and illustrator. My interests include making compelling designs and looking at dog pictures on the internet.</p>
+              <p>I’m a New Zealand based designer and illustrator. My interests include making compelling designs and looking at dog pictures on the internet.</p>
             </div>
             <div class="about-social">
               <ul class="list-inline">
